src/test/compile-fail/cast-from-nil.rs
// error-pattern: cast from nil: () as u32
fn main() { let u = (assert true) as u32; }